[project]
name = "streamlit-playground"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Bruno Lima Cardoso", email = "blimacardoso@gmail.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "Apache-2.0"}


[tool.pdm]
distribution = false
