[project]
name = "streamlit-playground"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Bruno Lima Cardoso", email = "blimacardoso@gmail.com"},
]
dependencies = ["commitizen>=4.4.1", "pre-commit>=4.2.0"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "Apache-2.0"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
pre_commit ="git add -i"
commit = "cz commit"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "src/__version__.py",
    "pyproject.toml:version"
]
update_changelog_on_bump = true
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]